--- a/Data Analysis.ipynb
+++ b/Data Analysis.ipynb
@@ -82,11 +82,26 @@
     "**Data Visualisation** \\\n",
     "_Actor:_ User\n",
     "_Goal:_ To create a Matplotlib chart for easy visualisation \\\n",
-    "_Preconditions:_ A trend has to bee identified \\\n",
+    "_Preconditions:_ A trend has to be identified \\\n",
     "_Mainflow:_ \\\n",
-    "&nbsp; 1. \n",
-    "&nbsp;\n",
-    "&nbsp;"
+    "&nbsp; 1. System inputs trend into a Matplotlib chart \\\n",
+    "&nbsp; 2. system displays Matplotlib chart \\\n",
+    "_Postconditions:_ A Matplotlib chart has been created from the trend and is ready to be saved into a .csv or .png file \\\n",
+    "\\\n",
+    "**Data Reporting** \\\n",
+    "_Actor:_ User \\\n",
+    "_Goal:_ To save and store Matplotlib chart and the identified trend in a .png and .csv file \\\n",
+    "_Preconditions:_ A Matplotlib chart has been created \\\n",
+    "_Mainflow:_ \\\n",
+    "&nbsp; 1. System creates a .csv file \\\n",
+    "&nbsp; 2. System stores trend in .csv file \\\n",
+    "&nbsp; 3. System creates .png file \\\n",
+    "&nbsp; 4. System stores Matplotlib chart in .png file \\\n",
+    "_Postconditions:_ 2 files, a .csv and .png file has been created with the trend and Matplotlib chart stored and saved inside.\n",
+    "\n",
+    "### Non-Functional Requirements\n",
+    "\n",
+    "**Usability** \\\n"
    ]
   }
  ],
