--- a/Data Analysis.ipynb
+++ b/Data Analysis.ipynb
@@ -161,12 +161,12 @@
    "source": [
     "| Field    | Datatype  | Format for Display | Description | Example | Validation |\n",
     "| -------- | --------- | ------------------ | ----------- | ------- | ---------- |\n",
-    "| Date | datetime64 | YYYY-MM-DD | ----------- | ------- | ---------- |\n",
-    "| Location | object | XX…XX | ----------- | ------- | ---------- |\n",
-    "| Rainfall | float64 | ------------------ | ----------- | ------- | ---------- |\n",
-    "| WindSpeed (3pm) | integer64 | ------------------ | ----------- | ------- | ---------- |\n",
-    "| Humidity (3pm) | integer64 | ------------------ | ----------- | ------- | ---------- |\n",
-    "| Temperature (3pm) | float64 | ------------------ | ----------- | ------- | ---------- |\n"
+    "| Date | datetime64 | DD-MM-YYYY | The date the data was recorded. | 1/11/2007 | Must be in the format of DD-MM-YYYY and cannot be reverse. |\n",
+    "| Location | object | XX…XX | The location where the weather data is recorded. | Canberra | Can be any amount of characters but must not include numbers. |\n",
+    "| Rainfall | float64 | NN.N | The amount of rainfall that was recorded at a location on a date. | 13.6 | Must be a decimal number to 1 decimal places. |\n",
+    "| WindSpeed (3pm) | integer64 | NN | The speed of the wind at 3pm on a location on a date. | 30 | Must be a whole number. |\n",
+    "| Humidity (3pm) | integer64 | NN | The humidity at 3pm at a location on a date. | 29 | Must be a whole number. |\n",
+    "| Temperature (3pm) | float64 | NN.N | The tempurature at 3pm at a location on a date. | 23.6 | Must be a decimal number to 1 decimal place. |\n"
    ]
   }
  ],
