--- a/Data Analysis.ipynb
+++ b/Data Analysis.ipynb
@@ -16,7 +16,7 @@
     "### Choose Your Data Scenario:\n",
     "\n",
     "**Data:** A collection of weather data across Australia from 2007 to 2017 (10 Years).\\\n",
-    "**Goal:** How does the weather alter in Sydney as seasons change.\\\n",
+    "**Goal:** How does the weather alter in Sydney as time passes.\\\n",
     "**Source:** https://www.kaggle.com/datasets/arunavakrchakraborty/australia-weather-data \\\n",
     "**Access:** The data is publically Accessible on kaggle.com.\\\n",
     "**Access Method:** It will be accessible as a csv.\n",
@@ -171,8 +171,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.0"
   },
   "orig_nbformat": 4
  },
