Chart No Work :(
The matplotlib chart does not like dates. I am currently trying to figure out how to make it like it.

--- a/Data Analysis.ipynb
+++ b/Data Analysis.ipynb
@@ -161,7 +161,7 @@
    "source": [
     "| Field    | Datatype  | Format for Display | Description | Example | Validation |\n",
     "| -------- | --------- | ------------------ | ----------- | ------- | ---------- |\n",
-    "| Date | datetime64 | DD-MM-YYYY | The date the data was recorded. | 1/11/2007 | Must be in the format of DD-MM-YYYY and cannot be reverse. |\n",
+    "| Date | datetime64 | DD-MM-YYYY | The date the data was recorded. | 2008-02-01 | Must be in the format of YYYY-MM-DD and cannot be reverse. |\n",
     "| Location | object | XX…XX | The location where the weather data is recorded. | Canberra | Can be any amount of characters but must not include numbers. |\n",
     "| Rainfall | float64 | NN.N | The amount of rainfall that was recorded at a location on a date. | 13.6 | Must be a decimal number to 1 decimal places. |\n",
     "| WindSpeed (3pm) | integer64 | NN | The speed of the wind at 3pm on a location on a date. | 30 | Must be a whole number. |\n",
