--- a/Data Analysis.ipynb
+++ b/Data Analysis.ipynb
@@ -206,7 +206,7 @@
    "source": [
     "**Samraj:** Yyoung's dataset follows the key aspects of functional requirements which involve successfully loading a .csv file and visualising it using a matplotlib chart. The program can handle misinputs and has cleverly been presented by providing multiple options for the user in order to display detailed and accurate data of weather in Sydney ranging from 2008 to 2017. Overall, the user interface allows for easy navigation and is able to produce clean data without encountering troublesome errors. \n",
     "\n",
-    "**p2:** "
+    "**Bodhi:** "
    ]
   },
   {
