--- a/Data Analysis.ipynb
+++ b/Data Analysis.ipynb
@@ -200,21 +200,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Calculations\n",
+    "I did not make any calculations in the analysis. However, I did remove a lot of the data. The removal was very accurate as I made sure that it did not deleat any of the important data. \\\n",
+    "\n",
+    "### Accuracy\n",
+    "I believe that my data is as accurate as it can be. However, I believe that if I find a way to display all the dates in stead of only some of it, it would make the data a lot more accurate as you are able to see what happened exacly on that date. \\\n",
+    "\n",
+    "### Conclusion\n",
+    "When I analized some of my data, I discovered a clear trend showing signs of globle warming. I could see clearly that the temperature was increasing each year. "
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Samraj:** Yyoung's dataset follows the key aspects of functional requirements which involve successfully loading a .csv file and visualising it using a matplotlib chart. The program can handle misinputs and has cleverly been presented by providing multiple options for the user in order to display detailed and accurate data of weather in Sydney ranging from 2008 to 2017. Overall, the user interface allows for easy navigation and is able to produce clean data without encountering troublesome errors. \n",
-    "\n",
-    "**Bodhi:** "
+    "**Samraj:** Yyoung's dataset follows the key aspects of functional requirements which involve successfully loading a .csv file and visualising it using a matplotlib chart. The program can handle misinputs and has cleverly been presented by providing multiple options for the user in order to display detailed and accurate data of weather in Sydney ranging from 2008 to 2017. Overall, the user interface allows for easy navigation and is able to produce clean data without encountering troublesome errors. \\\n",
+    "\\\n",
+    "**Bodhi:**  The program works well and does what was laid out in the functional requirements, but it doesn't have a trendline to show the trend."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Evaluation of Final product"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Functional Requirement:** My system was able to load a .csv file. It was also able to filter out unnessisary, duplicated or missing values. However, it was unable to identify trends like I hoped it would, so it will have to be manual. It was able to produce a Matplotlib chart out of the cleaned data instead of the trend. I was able to store the Matplotlib graph inside of a .png file.\n",
+    "\n",
+    "**Non-Functional Requirements:** My UI is pretty easy to navigate and loads fairly fast, considering the amount of data I have. It is simple and really easy to work with. It is able to handle large amounts of data without crashing or glitching. The UI is also able to handle misinputs and errors. My README file also gives a description of my program. My system is really reliable as I have made commits into github to save my work regularly. I have also removed incorrect data before analysis.\n",
+    "\n",
+    "**Project Management:** Throughout the project, I have had my strengths and weaknesses that I faced. One of my weaknesses is time management. Although we have been given countless hours inclass to do this project, most of the time, I would zone out, sit there and stare into space, which resulted in my having to spend time doing it at home :(. Whenever I would get stuck on a peice of code, first, I would sit there and think:'I don't want to do this anymore'. After a few minets, I would go onto chrome and search up the solution. If I did not find it, I would ask oliver or if he didn't know, then Mr Scott. Most of the time, the code I got off the internet would not work, so I have to go back and forth, testing and researching, untill I found one that did. I faced many challanges, like my time management skills which resulted in me having to write this 10 pm the night before its due. I'm also not very efficient with my code, as you can see with my 12 .csv files. However, I worked through them, spending time at home to make up the time at school and to finish my inefficent code. However, I believe that I put in a lot of effort in this task, even if I did zone out a little. "
+   ]
   }
  ],
  "metadata": {
