--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-My program can help identify trends and produce graphs displaying the Rainfall, Humidity, Windspeed and Temperature. It will display a grapph for each year, giving you easy visualization.
+My program can help identify trends and produce graphs displaying the Rainfall, Humidity, Windspeed and Temperature in Sydney. It will display a graph for each year, giving you easy visualization and analysis on trends or outlies that may have happened over the years.
